# Kanterita2021

./: Cargo.toml
data/: personas.csv
src/: main.rs
