[package]
name = "Kanterita2021"
version = "0.1.0"
authors = ["Victor More <vrmorepalacios@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
postgres = "0.19.0"
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = "0.13"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"

actix-web = "3.1.0"
actix-rt = "1.1.1"


[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'